2000-07-06  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary): Parse for
	more header information to allow message threading in IMAP.
	(imap_get_message_info): Same.

	* camel-folder-summary.c: Renamed summary_format_* to
	camel_summary_format_* and moved them into public scope.

	* providers/smtp/camel-smtp-transport.c (smtp_connect): Oops. Don't
	pass port # as a string in the error code (if it fails to connect).

	* providers/imap/camel-imap-folder.c (imap_append_message): Changed
	over to camel_imap_command_extended as that was the source of the
	problems - apparently appending replies with more than just 1 line.

2000-07-05  Dan Winship  <danw@helixcode.com>

	* camel-folder-search.c (search_header_contains): make header
	matching case-insensitive

	* camel-folder-summary.c:
	* camel-session.c:
	* providers/mbox/camel-mbox-folder.c:
	* providers/mbox/camel-mbox-summary.c: Remove some non-error case
	debugging-type messages.

2000-07-05  Ettore Perazzoli  <ettore@helixcode.com>

	* providers/mbox/camel-mbox-summary.c (d): Define to empty so that
	we get rid of a ton of debugging messages.

2000-07-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-mime-utils.h: Added prototype for uudecode_step

	* camel-mime-utils.c (uudecode_step): Cleaned up some junk that
	should have been cleaned up when debugging printf's were taken out.

2000-07-05  Ettore Perazzoli  <ettore@helixcode.com>

	* providers/mbox/camel-mbox-summary.c (camel_mbox_summary_sync):
	Update the X-Evolution: header even if the in-memory UID and the
	saved UID are not the same.  Otherwise mboxes with clashing UIDs
	can never be fixed.

	* camel-folder-summary.c
	(camel_folder_summary_add_from_parser): Add the message to the
	summary before doing any ibex stuff.  In fact, this might also
	have the side effect of reassigning the UID so it needs to be done
	before we start using the UID.

	* providers/mbox/camel-mbox-folder.c (mbox_append_message): Add