@@ -1,3 +1,10 @@
+2000-07-06  Dan Winship  <danw@helixcode.com>
+
+	* camel-mime-utils.c (header_references_decode): Make this deal
+	with the full RFC822 References/In-Reply-To format rather than
+	just the more-nicely-behaved RFC1036 version. (Needed to parse
+	In-Reply-To headers with extra junk in them.)
+
 2000-07-06  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* providers/imap/camel-imap-folder.c (imap_get_summary): Parse for
